---------------------------------------------------------------------------------------------------
Version: 2.1.4
Date: 2024-??-??
  Features:
    - Experimental new pipe-planner. It's rewritten to be able to plan underground pipes up-front, and thus being better suited for planning larger/dense fields where the original planning would fail.
    - Added setting to enable the new planner (disabled by default, until its better tested)
---------------------------------------------------------------------------------------------------
Version: 2.1.3
Date: 2024-11-23
  Features:
    - Entities are only deconstructed if they collide with the structures being placed. This makes it less likely to unnecessarily deconstruct entities from other mods; kindly provided by https://github.com/randomflyingtaco
    - Russian localisation file updated; kindly provided by https://github.com/Astorin     
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 2024-11-19
  Features:
    - Added dropdown to pick how long a stretch of straight pipes need to be before it's being buried.
  Fixes:
    - Higher res icons the fix blur (needed after Factorio update 2.0.18 increased the button sizes).
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2024-11-12
  Features:
    - Build positions are tested if a default_cover_tile applies. If so, the tile is planned as well. This means landfill on water, foundation on lava, and ice-platform on ammonia.
    - Build positions are tested if they're meltable. If so, "concrete" is planned as well. ("concrete" is currently hardcoded, and might not work well together with some serious overhaul mods.)
  Fixes:
    - Undo now also includes the (planned) deconstructed entities. 
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2024-10-31
  Features: