@@ -24,12 +24,16 @@ too-many-power-poles=P.U.M.P. has performed (too) many iterations to place power
 pump-interface-with-module-inserter-mod=Insert modules
 pump-ignore-research=Ignore research
 pump-always-show=Always show build options menu
+
+# Temp-setting; no need for translating in other languages
 pump-use-plumber-pro=Use new (experimental) pipe planning logic
 
 [mod-setting-description]
 pump-interface-with-module-inserter-mod=When enabled, P.U.M.P. uses the the configuration of 'Module Inserter' to add modules to the placed ghosts as well.
 pump-ignore-research=When enabled, P.U.M.P. will include the option in the menu for miners and pipes that are not yet unlocked through research.
 pump-always-show=When disabled, the menu only opens when new options are available, or when holding SHIFT while using P.U.M.P.. You can toggle this option from the mod-settings as well.
+
+# Temp-setting; no need for translating in other languages
 pump-use-plumber-pro=The new planner should be better equipped to handle densely packed fields, by changing heuristics and being able to plan undergound pipes beforehand. It's not well tested yet, so it's optional for now.
 
 [pump-toolpicker]
@@ -38,15 +42,16 @@ confirm=Confirm
 cancel=Cancel
 always-show=Always show this menu
 exclude-option-tooltip=Manual placement
-choose-extractor-generic=Select which buildings should be placed.
-choose-extractor-unknown-selection=Select which buildings should be placed.
+choose-extractor-generic=Select which buildings should be placed:
+choose-extractor-unknown-selection=Select which buildings should be placed:
 choose-extractor-changed-options=The building options available to you have changed since last you used P.U.M.P.. You may want to adjust your pick? 
 pipe-bury-label=Bury stretches of pipes:
-pipe-bury-tooltip=How long a straight section of pipe needs to be before it's converted to an underground pipe:
+pipe-bury-tooltip=How long a straight section of pipe needs to be before it's converted to an underground pipe.
 pipe-bury-no-minimum=No minimum
 pipe-bury-short=Short
 pipe-bury-long=Long
 pipe-bury-skip=Don't bury pipes
+meltable-tile-cover=Select cover for meltable tiles: 
 
 [controls]
 pump-selection-tool-toggle=Toggle P.U.M.P. selection tool
