@@ -2,6 +2,7 @@
 Version: 2.1.4
 Date: 2024-??-??
   Features:
+    - Added picker for which cover tile to use on meltable tiles. Option is only visible on surfaces with meltable tiles (Aquilo).
     - Experimental new pipe-planner. It's rewritten to be able to plan underground pipes up-front, and thus being better suited for planning larger/dense fields where the original planning would fail.
     - Added setting to enable the new planner (disabled by default, until its better tested)
 ---------------------------------------------------------------------------------------------------
